# imgui-cmake

./: CMakeLists.txt  CMakePresets.json  imconfig.h
backends/: CMakeLists.txt  imgui_impl_allegro5.cpp  imgui_impl_allegro5.h  imgui_impl_android.cpp  imgui_impl_android.h  imgui_impl_dx10.cpp  imgui_impl_dx11.cpp  imgui_impl_dx12.cpp  imgui_impl_dx9.cpp  imgui_impl_dx9.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_glut.cpp  imgui_impl_glut.h  imgui_impl_metal.h  imgui_impl_metal.mm  imgui_impl_opengl2.cpp  imgui_impl_opengl3.cpp  imgui_impl_osx.h  imgui_impl_sdl2.cpp  imgui_impl_sdl3.cpp  imgui_impl_sdlgpu3.cpp  imgui_impl_sdlrenderer2.cpp  imgui_impl_sdlrenderer3.cpp  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_impl_wgpu.cpp  imgui_impl_win32.cpp
examples/example_android_opengl3/: CMakeLists.txt
misc/: CMakeLists.txt
misc/freetype/: imgui_freetype.cpp  imgui_freetype.h
